add changes to fonts-task, add changes for global menu style (change color of links in simple-menu

--- a/src/stylesheets/components/_menu.scss
+++ b/src/stylesheets/components/_menu.scss
@@ -137,6 +137,12 @@ $menu-icon-spacing: 0.25rem !default;
 
   a {
     padding: 0;
+    color: $white;//
+  }
+
+  a:hover,
+  a:active{
+    color: $anchor-color;//
   }
 }
 
