--- a/src/stylesheets/site-components/_team.scss
+++ b/src/stylesheets/site-components/_team.scss
@@ -1,8 +1,75 @@
-.our-team{
+.our-team {
   background: $white;
-  padding: 10rem 14rem;
+  ul{
+    margin-bottom: 0;
+  }
 }
 
-.team-member-list{
+.about-team{
+  padding: 10rem 0 14rem;
+}
+
+.team-member-list {
   padding-top: 8rem;
+}
+
+.member-social-info {
+  position: relative;
+  margin-bottom: 5rem;
+  img{
+    height: 17rem;
+  }
+}
+
+.team-member-social-link {
+  position: absolute;
+  top: 40%;
+  right: 6rem;
+  li{
+    margin-right: 1rem;
+  }
+
+  li:last-child {
+    margin-right: 0;
+  }
+
+  a{
+   font-size: 2.4rem;
+   background: $blue;
+   color: $white;
+   line-height: 5rem;
+   height: 5rem;
+   width: 5rem;
+   text-align: center;
+   border-radius: 50%;
+  }
+}
+
+.about-member{
+  
+  .about-member-title{
+    color: $blue;
+  }
+
+}
+
+.team-achievements{
+  background: $dark-gray;
+  padding: 8rem 0 7.5rem;
+  color: $white;
+
+  .icon{
+    font-size: 7.2rem;
+    line-height: 1;
+  }
+
+  .achievement-description{
+    color: $white;
+  }
+
+  .stat{
+    font-family: $header-font-family;
+    font-weight: $subheader-font-weight;
+  }
+
 }
