change font family for .site-title, add class round

--- a/src/stylesheets/site-components/_classes.scss
+++ b/src/stylesheets/site-components/_classes.scss
@@ -12,12 +12,16 @@ p{
 
 .site-title{
   font-size: 3rem;
-  font-family: 'Montserrat', 'Helvetica', Arial sans-serif;
+  font-family: $header-font-family;
   font-weight: bold;
   color: $white;
 }
 
 .button {
   min-width: 9rem;
+}
+
+.round{
+  border-radius: 50%;
 }
 
