--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -1,5 +1,6 @@
 @import "site-components/fonts";
 @import "app";
+@import "site-components/custom-mixin";
 @import "site-components/classes";
 @import "site-components/header";
 @import "site-components/services";
@@ -7,6 +8,8 @@
 @import "site-components/our-works";
 @import "site-components/team";
 @import "site-components/skills";
+@import "site-components/subscribe";
+@import "site-components/partners";
 @import "site-components/contacts";
 @import "site-components/footer";
 
