--- a/src/stylesheets/site-components/_team.scss
+++ b/src/stylesheets/site-components/_team.scss
@@ -3,15 +3,16 @@
   ul{
     margin-bottom: 0;
   }
+
+  .section-title{
+    margin-bottom: 8rem;
+  }
 }
 
 .about-team{
   padding: 10rem 0 14rem;
 }
 
-.team-member-list {
-  padding-top: 8rem;
-}
 
 .member-social-info {
   position: relative;
