--- a/src/stylesheets/settings/_settings.scss
+++ b/src/stylesheets/settings/_settings.scss
@@ -52,7 +52,7 @@ $global-font-size: 10px;
 $global-width: rem-calc(1200);
 $global-lineheight: 1.2;
 $foundation-palette: (
-  primary: #2ba6cb,
+  primary: #42b8dd,
   secondary: #777,
   success: #3adb76,
   warning: #ffae00,
@@ -68,16 +68,19 @@ $foundation-palette: (
 $blue: #42b8dd;
 $light-gray: #ebebeb;
 $medium-gray: #666666;
+$cloud-gray: #7f7f7f;
 $dark-gray: #363636;
 $onyx-gray: #252525;
-$iron-gray: #898989;
+$silver-gray: #898989;
 $iron-gray: #484848;
 $black: #000;
 $white: #fff;
 
 $body-background: $white;
-$body-font-color: $black;
-$body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
+$body-font-color: $dark-gray;
+//$body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
+//$body-font-family: "FontAwesome", "ProximaNova", "Helvetica", Arial sans-serif;
+$body-font-family: "FontAwesome", "Helvetica", Arial sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
@@ -155,8 +158,8 @@ $code-font-weight: $global-weight-normal;
 $code-background: $light-gray;
 $code-border: 1px solid $medium-gray;
 $code-padding: rem-calc(2 5 1);
-//$anchor-color: $primary-color;
-$anchor-color: $blue;
+$anchor-color: $primary-color;
+//$anchor-color: $blue;
 $anchor-color-hover: scale-color($anchor-color, $lightness: -14%);
 $anchor-text-decoration: none;
 $anchor-text-decoration-hover: none;
@@ -167,9 +170,11 @@ $list-lineheight: $paragraph-lineheight;
 $list-margin-bottom: $paragraph-margin-bottom;
 $list-style-type: none;
 $list-style-position: outside;
-$list-side-margin: 1.25rem;
+//$list-side-margin: 1.25rem;
+$list-side-margin:0;
 $list-nested-side-margin: 1.25rem;
-$defnlist-margin-bottom: 1rem;
+//$defnlist-margin-bottom: 1rem;
+$defnlist-margin-bottom: 0;
 //$defnlist-term-weight: $global-weight-bold;
 $defnlist-term-weight: $global-weight-normal;
 $defnlist-term-margin-bottom: 0.3rem;
@@ -213,9 +218,9 @@ $input-error-font-weight: $global-weight-bold;
 
 $accordion-background: $white;
 $accordion-plusminus: true;
-$accordion-item-color: foreground($accordion-background, $primary-color);
-$accordion-item-background-hover: $light-gray;
-$accordion-item-padding: 1.25rem 1rem;
+$accordion-item-color: foreground($accordion-background, $silver-gray);
+$accordion-item-background-hover: $white;
+$accordion-item-padding: 1.2rem 2rem;
 $accordion-content-background: $white;
 $accordion-content-border: 1px solid $light-gray;
 $accordion-content-color: foreground($accordion-content-background, $body-font-color);
@@ -256,17 +261,18 @@ $button-padding: 0.9rem;
 //$button-margin: 0 0 $global-margin 0;
 $button-margin: 0;
 $button-fill: solid;
-$button-background: $primary-color;
+//$button-background: $primary-color;
+$button-background: $white;
 $button-background-hover: scale-color($button-background, $lightness: -15%);
-$button-color: $white;
+$button-color: $primary-color;
 $button-color-alt: $black;
 //$button-radius: $global-radius;
 $button-radius: 10px;
 $button-sizes: (
   tiny: 0.6rem,
   small: 0.75rem,
-  default: 1.6rem,
-  large: 1.25rem,
+  default: 1.6rem,rad
+  large: 8rem,
 );
 $button-opacity-disabled: 0.25;
 
@@ -347,29 +353,36 @@ $fieldset-border: 1px solid $medium-gray;
 $fieldset-padding: rem-calc(20);
 $fieldset-margin: rem-calc(18 0);
 $legend-padding: rem-calc(0 3);
-$form-spacing: rem-calc(16);
-$helptext-color: $black;
+$form-spacing: rem-calc(30);
+
+$helptext-color: $dark-gray;
 $helptext-font-size: rem-calc(13);
 $helptext-font-style: italic;
+
 $input-prefix-color: $black;
 $input-prefix-background: $light-gray;
 $input-prefix-border: 1px solid $medium-gray;
 $input-prefix-padding: 1rem;
+
 $form-label-color: $black;
 $form-label-font-size: rem-calc(14);
 $form-label-font-weight: $global-weight-normal;
 $form-label-line-height: 1.8;
+
 $select-background: $white;
 $select-triangle-color: $dark-gray;
 $select-radius: $global-radius;
 $input-color: $black;
-$input-placeholder-color: $medium-gray;
+
+$input-placeholder-color: $dark-gray;
 $input-font-family: inherit;
 $input-font-size: rem-calc(16);
-$input-background: $white;
+//$input-background: $white;
+$input-background: $light-gray;
 $input-background-focus: $white;
 $input-background-disabled: $light-gray;
-$input-border: 1px solid $medium-gray;
+//$input-border: 2px solid $medium-gray;
+$input-border: 2px solid $dark-gray;
 $input-border-focus: 1px solid $dark-gray;
 $input-shadow: inset 0 1px 2px rgba($black, 0.1);
 $input-shadow-focus: 0 0 5px $medium-gray;
@@ -377,6 +390,7 @@ $input-cursor-disabled: not-allowed;
 $input-transition: box-shadow 0.5s, border-color 0.25s ease-in-out;
 $input-number-spinners: true;
 $input-radius: $global-radius;
+
 
 // 20. Label
 // ---------
