--- a/src/stylesheets/site-components/_team.scss
+++ b/src/stylesheets/site-components/_team.scss
@@ -1,7 +1,9 @@
 .our-team {
   background: $white;
-  ul{
-    margin-bottom: 0;
+
+
+  .team-member-list{
+    margin-bottom: 3.5rem;
   }
 
   .section-title{
