--- a/src/stylesheets/site-components/_custom-mixin.scss
+++ b/src/stylesheets/site-components/_custom-mixin.scss
@@ -23,15 +23,40 @@
 }
 
 @mixin custom-menu-simple {
-
   a {
     padding: 0;
     color: $white;
   }
 
   a:hover,
-  a:active{
+  a:active {
     color: $anchor-color;
   }
+}
 
+
+@mixin custom-button-hollow-style($color: $primary-color) {
+  $color-hover: $white;
+
+  border: 2px solid $color;
+  color: $color;
+
+  &:hover, &:focus {
+    background: $primary-color;
+    border-color: $primary-color;
+    color: $color-hover;
+  }
+}
+
+@mixin custom-close-button {
+  color: $white;
+  background: $primary-color;
+}
+
+@mixin more {
+  background: $primary-color;
+  color: $white;
+  font-size: 2.2rem;
+  padding: 0;
+  font-family: "FontAwesome", "Helvetica", Arial sans-serif;
 }
