add styles for button scroll-up

--- a/src/stylesheets/site-components/_footer.scss
+++ b/src/stylesheets/site-components/_footer.scss
@@ -1,9 +1,10 @@
-footer{
+footer {
   padding: 5rem 0 2.5rem;
   background: $onyx-gray;
   border-bottom: 3px solid $iron-gray;
 
-  p{
+  p {
     color: $iron-gray;
+    margin-bottom: 0;
   }
 }
