add connection of new files

--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -6,6 +6,7 @@
 @import "site-components/services";
 @import "site-components/video";
 @import "site-components/our-works";
+@import "site-components/reviews";
 @import "site-components/team";
 @import "site-components/skills";
 @import "site-components/subscribe";
