--- a/src/stylesheets/site-components/_video.scss
+++ b/src/stylesheets/site-components/_video.scss
@@ -1,29 +1,21 @@
 .video-block {
   position: relative;
+  display: inline-block;
+  width: 100%;
   height: 100%;
-  overflow: hidden;
-  height: 82rem;
-  max-height: 82rem;
+  //max-height: 82rem;
+  margin: 80px 0 0 0;
   min-height: 26rem;
-  margin-top: 8rem;
 }
 
 video{
-  display: block;
+  display: inline-block;
   height: auto;
   min-height: 100%;
   min-width: 100%;
-  perspective: 1000;
-  position: absolute;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  width: auto;
+  width: 100%;
   z-index: -1;
-  backface-visibility: hidden;
-  background-size: cover;
-  bottom: 0;
+  outline: 1px solid red;
 }
 
 
@@ -31,16 +23,19 @@ video{
 
 
 .controls-video {
-  position: relative;
-  padding-top: 30rem;
-  height: 82rem;
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
   background: $medium-gray;
-  max-height: 82rem;
+
   .controls-video-content{
     position: relative;
+    top: 30rem;
   }
 
   .button.play {
+    float: left;
     height: 12.8rem;
     width: 12.8rem;
     @extend .round;
@@ -49,8 +44,8 @@ video{
     color: $white;
     background: transparent;
     padding: 0;
-    position: absolute;
-    top: 0;
+    //position: absolute;
+    //top: 0;
 
     &:hover,
     &:focus {
@@ -71,7 +66,8 @@ video{
 
   .section-title,
   .controls_video-description {
-    padding-left: 17rem;
+    display: inline-block;
+    width: 100%;
   }
 
   .controls_video-description {
@@ -80,4 +76,8 @@ video{
     color: $primary-color;
   }
 
+}
+.wrapper_title{
+  display: inline-block;
+  padding-left: 4rem;
 }
