--- a/src/stylesheets/site-components/_custom-mixin.scss
+++ b/src/stylesheets/site-components/_custom-mixin.scss
@@ -60,3 +60,16 @@
   padding: 0;
   font-family: "FontAwesome", "Helvetica", Arial sans-serif;
 }
+
+
+@mixin breakpoint($point) {
+  @else if $point == large {
+    @media (max-width: 1024px) { @content; }
+  }
+  @else if $point == medium {
+    @media (max-width: 640px) { @content; }
+  }
+  @else if $point == small {
+    @media (max-width: 320px)  { @content; }
+  }
+}
