--- a/src/stylesheets/site-components/_custom-mixin.scss
+++ b/src/stylesheets/site-components/_custom-mixin.scss
@@ -62,14 +62,21 @@
 }
 
 
-@mixin breakpoint($point) {
+@mixin custom-breakpoint($point) {
+
+  @if $point == xxlarge {
+    @media (min-width: 1400px) { @content; }
+  }
+    @else if $point == xlarge {
+    @media (min-width: 1200px) { @content; }
+  }
   @else if $point == large {
-    @media (max-width: 1024px) { @content; }
+    @media (min-width: 1024px) { @content; }
   }
   @else if $point == medium {
-    @media (max-width: 640px) { @content; }
+    @media (min-width: 640px) { @content; }
   }
   @else if $point == small {
-    @media (max-width: 320px)  { @content; }
+    @media (min-width: 320px)  { @content; }
   }
 }
