--- a/src/stylesheets/site-components/_skills.scss
+++ b/src/stylesheets/site-components/_skills.scss
@@ -44,6 +44,10 @@
     height: 17rem;
     width: 17rem;
     @extend .round;
+    @include custom-breakpoint(medium){
+      height: 12rem;
+      width: 12rem;
+    }
   }
 
   .diagram.half-diagram{
