--- a/src/stylesheets/site-components/_services.scss
+++ b/src/stylesheets/site-components/_services.scss
@@ -68,12 +68,22 @@
 
 .all-services {
   background: $white;
-  padding: 5.5rem 0;
+  padding: 2rem 0;
+
+  @include custom-breakpoint(medium){
+    padding: 5.5rem 0;
+  }
 
   .service-list {
     list-style: none;
     a {
       font-size: 3.6rem;
+    }
+  }
+  .service-list-item:nth-child(-n+3){
+    margin-bottom: 2rem;
+    @include custom-breakpoint(medium){
+      margin-bottom: 0;
     }
   }
 }
