--- a/src/stylesheets/site-components/_team.scss
+++ b/src/stylesheets/site-components/_team.scss
@@ -13,48 +13,103 @@
 
 .about-team {
   padding: 10rem 0 14rem;
+
+  .team-member-item {
+    margin-bottom: 4rem;
+    @include custom-breakpoint(large){
+      margin-bottom: 0;
+    }
+  }
 }
+
+
 
 
 .member-social-info {
   position: relative;
-  margin-bottom: 5rem;
+  margin-bottom: 4rem;
+  @include custom-breakpoint(medium){
+    float: left;
+    padding-right: 7rem;
+  }
+  @include custom-breakpoint(large){
+    float: none;
+    //padding-right: 0;
+  }
+
   img{
     height: 17rem;
+    display: block;
+    margin: 0 auto;
+    @include custom-breakpoint(xlarge){
+      margin-left: 0;
+    }
+  }
+
+  .team-member-social-link {
+    width: 17rem;
+    margin: 1rem auto 0;
+    //@include custom-breakpoint(small){
+    //  right: 0;
+    //}
+
+    @include custom-breakpoint(xlarge){
+      position: absolute;
+      top: 40%;
+      right: 6rem;
+      width: auto;
+    }
+
+    li {
+      margin-right: 1rem;
+    }
+
+    li:last-child {
+      margin-right: 0;
+    }
+
+    a {
+      font-size: 2.4rem;
+      background: $blue;
+      color: $white;
+      line-height: 5rem;
+      height: 5rem;
+      width: 5rem;
+      text-align: center;
+      border-radius: 50%;
+    }
   }
 }
 
-.team-member-social-link {
-  position: absolute;
-  top: 40%;
-  right: 6rem;
-  li{
-    margin-right: 1rem;
-  }
 
-  li:last-child {
-    margin-right: 0;
-  }
-
-  a {
-   font-size: 2.4rem;
-   background: $blue;
-   color: $white;
-   line-height: 5rem;
-   height: 5rem;
-   width: 5rem;
-   text-align: center;
-   border-radius: 50%;
-  }
-}
 
 .about-member {
+  @include custom-breakpoint(medium){
+    padding-top: 3rem;
+  }
   
-  .about-member-title{
+  .about-member-title {
     color: $blue;
   }
 
+  .about-member-title,
+  .subheader,
+  p{
+    text-align: center;
+    @include custom-breakpoint(medium){
+      text-align: left;
+    }
+    @include custom-breakpoint(medium){
+
+    }
+  }
+
+
 }
+
+
+
+
 
 .team-achievements {
   background: $dark-gray;
@@ -74,5 +129,4 @@
     font-family: $header-font-family;
     font-weight: $subheader-font-weight;
   }
-
 }
