--- a/src/stylesheets/site-components/_services.scss
+++ b/src/stylesheets/site-components/_services.scss
@@ -1,6 +1,10 @@
 .about-services {
+  margin-top: 8rem;
   background: $blue;
   padding: 5rem 0;
+  @include custom-breakpoint(medium){
+    margin-top: 0;
+  }
   h2,
   h3,
   p{
@@ -9,6 +13,7 @@
 
   .section-title{
     border-color: $white;
+    margin: 0 0 5rem 0;
   }
 
 }
@@ -18,6 +23,7 @@
   margin: 0;
   .services-list-item {
     position: relative;
+    margin-bottom: 3rem;
     padding: 1rem 1.5rem 0 14.5rem;
 
     .service-title {
@@ -27,7 +33,9 @@
 
   .cloud-platform,
   .client-friendly {
-    margin-bottom: 6rem;
+    @include breakpoint(medium){
+      margin-bottom: 6rem;
+    }
   }
 
   .cloud-platform::before {
