--- a/src/stylesheets/site-components/_subscribe.scss
+++ b/src/stylesheets/site-components/_subscribe.scss
@@ -6,5 +6,9 @@
   .subscribe-description{
     margin-bottom: 0;
     font: 3.6rem/1 "ProximaNova", "Helvetica", Arial sans-serif;
+    margin: 0 0 2rem 0;
+    @include custom-breakpoint(medium){
+      margin: 0;
+    }
   }
 }
