--- a/src/stylesheets/site-components/_team.scss
+++ b/src/stylesheets/site-components/_team.scss
@@ -12,10 +12,20 @@
 }
 
 .about-team {
-  padding: 10rem 0 14rem;
+  padding: 3rem 0 5rem 0;
+  @include custom-breakpoint(medium){
+    padding: 5rem 0 7rem 0;
+  }
+  @include custom-breakpoint(large){
+    padding: 10rem 0 14rem;
+  }
+
 
   .team-member-item {
     margin-bottom: 4rem;
+    &:nth-last-child{
+      margin-bottom: 0;
+    }
     @include custom-breakpoint(large){
       margin-bottom: 0;
     }
@@ -34,7 +44,6 @@
   }
   @include custom-breakpoint(large){
     float: none;
-    //padding-right: 0;
   }
 
   img{
@@ -49,10 +58,6 @@
   .team-member-social-link {
     width: 17rem;
     margin: 1rem auto 0;
-    //@include custom-breakpoint(small){
-    //  right: 0;
-    //}
-
     @include custom-breakpoint(xlarge){
       position: absolute;
       top: 40%;
@@ -99,12 +104,7 @@
     @include custom-breakpoint(medium){
       text-align: left;
     }
-    @include custom-breakpoint(medium){
-
-    }
   }
-
-
 }
 
 
@@ -113,20 +113,60 @@
 
 .team-achievements {
   background: $dark-gray;
-  padding: 8rem 0 7.5rem;
+  padding: 4rem 0 3.5rem;
   color: $white;
+  @include breakpoint(large){
+    padding: 8rem 0 7.5rem;
+  }
+
+  .achievements-list-item{
+    margin: 0 0 2rem 0;
+    @include custom-breakpoint(medium){
+      margin: 0;
+    }
+    &:last-child{
+      margin: 0;
+    }
+  }
+
+  .icon,
+  .statistic{
+    float: left;
+    @include custom-breakpoint(medium){
+      float: none;
+    }
+  }
 
   .icon{
-    font-size: 7.2rem;
     line-height: 1;
+    width: 20%;
+    font-size: 5.2rem;
+    @include custom-breakpoint(medium){
+      width: 100%;
+      font-size: 7.2rem;
+    }
+
+  }
+
+  .statistic {
+    font-family: $header-font-family;
+    font-weight: $subheader-font-weight;
+    width: 40%;
+    @include custom-breakpoint(medium){
+      width: auto;
+    }
   }
 
   .achievement-description {
+    float: right;
+    margin-top: 1rem;
+    width: 40%;
     color: $white;
+    @include custom-breakpoint(medium){
+      width: auto;
+      float: none;
+    }
   }
 
-  .stat {
-    font-family: $header-font-family;
-    font-weight: $subheader-font-weight;
-  }
+
 }
