--- a/src/stylesheets/settings/_settings.scss
+++ b/src/stylesheets/settings/_settings.scss
@@ -128,13 +128,21 @@ $font-family-monospace: Consolas, 'Liberation Mono', Courier, monospace;
 $header-sizes: (
   small: (
     'h1': 24,
-    'h2': 20,
+    'h2': 56,
     'h3': 19,
     'h4': 18,
     'h5': 17,
     'h6': 16,
   ),
   medium: (
+    'h1': 48,
+    'h2': 68,
+    'h3': 18,
+    'h4': 25,
+    'h5': 20,
+    'h6': 16,
+  ),
+  large: (
     'h1': 48,
     'h2': 72,
     'h3': 18,
@@ -200,7 +208,7 @@ $subheader-color: $iron-gray;
 $subheader-font-weight: $global-weight-normal;
 $subheader-margin-top: 0.2rem;
 $subheader-margin-bottom: 0.5rem;
-$stat-font-size: 7.2rem;
+$stat-font-size: 4.8rem;
 
 // 6. Abide
 // --------
