--- a/src/stylesheets/site-components/_our-works.scss
+++ b/src/stylesheets/site-components/_our-works.scss
@@ -23,9 +23,8 @@
 
     img{
       display: block;
-      height: auto;
-      min-height: 24rem;
-      min-width: 100%;
+      height: 37rem;
+      max-width: 37rem;
     }
   }
 }
