--- a/src/stylesheets/site-components/_custom-mixin.scss
+++ b/src/stylesheets/site-components/_custom-mixin.scss
@@ -18,7 +18,10 @@
     padding: 1.2rem 2rem;
     border-radius: $button-radius;
     border-bottom: 1px solid $light-gray;
-    font-size: 1.6rem;
+    font-size: 1.3rem;
+    @include custom-breakpoint(medium){
+      font-size: 1.6rem;
+    }
   }
 }
 
