--- a/src/stylesheets/site-components/_reviews.scss
+++ b/src/stylesheets/site-components/_reviews.scss
@@ -1,10 +1,14 @@
 .reviews{
   background-color: $medium-gray;
+  padding-bottom: 3rem;
 
   .user-review{
     max-width: 80rem;
     margin: 0 auto;
     outline: 1px solid red;
+    .orbit-container{
+      min-height: 15rem;
+    }
   }
 
   .text-review,
@@ -14,7 +18,8 @@
   }
 
   .text-review{
-    font-size: 1.8rem;
+    font-size: 3.6rem;
+    padding: 0 1rem;
 
     @include custom-breakpoint(medium){
       font-size: 3rem;
@@ -27,7 +32,12 @@
   .user-photo{
     height: 7rem;
     width: 7rem;
+    margin-bottom: 2rem;
     @extend .round;
+    display: none;
+    @include custom-breakpoint(medium){
+      display: block;
+    }
   }
 
 
@@ -39,6 +49,17 @@
     &, p {
       line-height: $paragraph-lineheight;
       color: $blockquote-color;
+    }
+  }
+
+  .orbit-bullets{
+    margin: 0;
+    top: 1.5rem;
+    button{
+      border: 2px solid $white;
+    }
+    .is-active{
+      background: $white;
     }
   }
 }
