import off-canvas nav in styles

--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -2,6 +2,7 @@
 @import "app";
 @import "site-components/custom-mixin";
 @import "site-components/classes";
+@import "site-components/mobile-off-canvas-nav";
 @import "site-components/header";
 @import "site-components/services";
 @import "site-components/video";
