--- a/src/stylesheets/site-components/_our-works.scss
+++ b/src/stylesheets/site-components/_our-works.scss
@@ -12,19 +12,68 @@
   .work-list-item{
     margin-bottom: 3rem;
   }
-  .work {
-    overflow: hidden;
-    position: relative;
-    max-width: 37rem;
-    max-height: 37rem;
-    border: 1px solid red;
-    text-align: center;
-    margin: 0 auto;
+}
 
-    img{
-      display: block;
-      height: 37rem;
-      max-width: 37rem;
+.work {
+  overflow: hidden;
+  position: relative;
+  max-width: 37rem;
+  max-height: 37rem;
+  border: 1px solid red;
+  text-align: center;
+  margin: 0 auto;
+
+  img {
+    display: block;
+    height: 37rem;
+    max-width: 37rem;
+  }
+
+  .work-description{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 0;
+    width: 100%;
+    transition: height .5s ease-in-out;
+    &::before{
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: #000;
+      opacity: 0;
+      transition: opacity .5s ease-in-out;
+    }
+    .work-description-info {
+      position: absolute;
+      bottom: -10rem;
+      padding: 3rem 0;
+      width: 100%;
+      height: 10rem;
+      background: $white;
+      transition: bottom .5s ease-in-out;
+    }
+    .work-description-title{
+      color: $primary-color;
     }
   }
+
+  &:hover .work-description{
+    height: 100%;
+  }
+
+  &:hover .work-description::before {
+    opacity: 0.7;
+  }
+  &:hover .work-description-info{
+    bottom: 0;
+  }
 }
+
+
+
+
+
