del useless styles, add scripts for mobile nav, add script for form validation

--- a/src/stylesheets/site-components/_classes.scss
+++ b/src/stylesheets/site-components/_classes.scss
@@ -43,10 +43,14 @@ p {
 }
 
 .button.scroll-up {
-   background: transparent;
-   font-size: 3.6rem;
-   padding: 0;
- }
+  background: transparent;
+  font-size: 3.6rem;
+  padding: 0;
+}
+
+.blocked{
+  overflow: hidden;
+}
 
 
 
