--- a/src/stylesheets/settings/_settings.scss
+++ b/src/stylesheets/settings/_settings.scss
@@ -75,6 +75,7 @@ $silver-gray: #898989;
 $iron-gray: #484848;
 $black: #000;
 $white: #fff;
+$red: #ec5840;
 
 $body-background: $white;
 $body-font-color: $dark-gray;
